🧹 chore: replace to new method